[UT] Fix unstability security test case (#41515)
Co-authored-by: Harbor Liu <460660596@qq.com>